[tool.poetry]
name = "yast"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.8.1"
fastapi = "^0.63.0"
boto3 = "^1.17.25"
mangum = "^0.10.0"

[tool.poetry.dev-dependencies]
moto = "^2.0.1"
black = "^20.8b1"
uvicorn = "^0.13.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
